fixing alignment for our mission section

--- a/src/our-story/our-story.module.css
+++ b/src/our-story/our-story.module.css
@@ -12,24 +12,29 @@ h2.oppSubheading {
 .ourMissionContent {
   line-height: 22px;
   padding-top: 25px;
-  padding-right: 270px;
+  padding-right: 280px;
   font-family: "Montserrat", sans-serif;
   font-size: 14pt;
   text-align: justify;
   color: var(--light-grey);
   margin: 0 auto;
-  width:75%;
+  width: 80.5%;
   word-wrap: break-word;
 }
 
 .ourMissionImg {
   float: right;
-  width: 420px;
-  height: 230px;
-  padding-left:10px;
-  padding-right:140px;
-  padding-top:29px;
+  width: 400px;
+  height: 200px;
+  padding-left: 10px;
+  padding-right: 145px;
+  padding-top: 29px;
   object-fit: fill;
+}
+
+.ourMissionImg img {
+  width: 100%;
+  height:300px;
 }
 
 /*--- Our Mascot ---*/
@@ -75,7 +80,7 @@ h2.oppSubheading {
   font-size: 14pt;
   text-align: justify;
   color: var(--light-grey);
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
 }
 
